all components added/ need more css to fix z-index and position

--- a/landing_page/main/style.css
+++ b/landing_page/main/style.css
@@ -40,19 +40,22 @@ nav {
 
 .home_section {
     background-image: url("./images/desktop/image-interactive.jpg");
-    width: 500px;
-    height: 500px;
+    width: 30rem;
+    height: 30rem;
+
+
 }
 
-.sections {
-    margin: 15%;
-}
+
 
 .sectionText {
     border: 1px solid white;
     background-color: white;
-    width: 200px;
-    height: 300px;
+    width: 20rem;
+    height: 30rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .flex_container {
@@ -78,9 +81,35 @@ nav {
 /* .products_section {} */
 
 .button-title-container {
-    display: inline;
+ display: flex;
+ justify-content:space-between
+}
 
 
+.our-creations {
+    color: black;
+    list-style: none;
+    font-size: 3rem;
+    display: flex;
+    justify-content: start;
+}
+
+button {
+    width: 7rem;
+    height: 2rem;
+    background-color: black;
+    color: aliceblue;
+    display: flex;
+    justify-content: end;
+    /* margin-right: 2rem; */
+}
+
+#section-main {
+    max-width: 960px;
+    margin: auto;
+    font-family: Josefin Sans;
+    justify-content: center;
+    text-align: center;
 }
 
 .products_section>.products-grid {
@@ -88,69 +117,91 @@ nav {
     width: 20rem;
     height: 20rem;
     grid-template-columns: auto auto auto auto;
-   
+    column-gap: 1rem;
+    margin-bottom: 1rem;
 
+
+}
+
+.products_section {
+    padding-top: 2rem;
+    padding-left: 1rem;
 }
 
 .grid-item1 {
     background-image: url("./images/desktop/image-deep-earth.jpg");
-    width: 15rem;
-    height: 25rem;
+    width: 13rem;
+    height: 20rem;
+    margin-bottom: 1rem;
 }
 
 .grid-item2 {
     background-image: url("./images/desktop/image-night-arcade.jpg");
-    width: 15rem;
-    height: 25rem;
+    width: 13rem;
+    height: 20rem;
 }
 
 .grid-item3 {
     background-image: url("./images/desktop/image-soccer-team.jpg");
-    width: 15rem;
-    height: 25rem;
+    width: 13rem;
+    height: 20rem;
 }
 
 .grid-item4 {
     background-image: url("./images/desktop/image-grid.jpg");
-    width: 15rem;
-    height: 25rem;
+    width: 13rem;
+    height: 20rem;
 }
 
 .grid-item5 {
     background-image: url("./images/desktop/image-from-above.jpg");
-    width: 15rem;
-    height: 25rem;
+    width: 13rem;
+    height: 20rem;
 }
 
 .grid-item6 {
     background-image: url("./images/desktop/image-pocket-borealis.jpg");
-    width: 15rem;
-    height: 25rem;
+    width: 13rem;
+    height: 20rem;
 }
 
 .grid-item7 {
     background-image: url("./images/desktop/image-curiosity.jpg");
-    width: 15rem;
-    height: 25rem;
+    width: 13rem;
+    height: 20rem;
 }
 
 .grid-item8 {
     background-image: url("./images/desktop/image-fisheye.jpg");
-    width: 15rem;
-    height: 25rem;
+    width: 13rem;
+    height: 20rem;
 }
 
 .products-grid>div {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
-    padding: 20px 0;
-    font-size: 30px;
+    padding: 1rem 0;
+    font-size: 2rem;
+
+}
+
+
+
+.products_section {
+    margin: 5rem;
+}
+
+
+footer{
+    background-color: black;
+    color: aliceblue;
     
 }
 
-footer {
-    background-color: rgb(6, 6, 6);
-    padding: 10px;
-    text-align: center;
 
+@media screen and (max-width: 375px) {
+    .nav li {
+        float: none;
+        width: 100%;
+    }
 }
